# marlin

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
diagram/: diagram.tex
src/: data_structures.rs  error.rs  lib.rs  rng.rs  test.rs
src/ahp/: constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
src/constraints/: ahp.rs  data_structures.rs  lagrange_interpolation.rs  mod.rs  polynomial.rs  snark.rs  verifier.rs  verifier_test.rs
src/fiat_shamir/: constraints.rs  mod.rs
src/fiat_shamir/poseidon/: constraints.rs  mod.rs
src/rng/: mod.rs
src/rng/fiat_shamir/: constraints.rs  mod.rs
src/rng/sponge/: mod.rs  poseidon.rs
src/sponge/: mod.rs  poseidon.rs
