[package]
name = "marlin"
version = "0.1.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/scipr-lab/marlin"
documentation = "https://docs.rs/marlin/"
keywords = ["cryptography", "polynomial commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra-core = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false }
ff-fft = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false }
bench-utils = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0" }
r1cs-core = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false }

poly-commit = { git = "https://github.com/scipr-lab/poly-commit", rev = "efff1c1", default-features = false }

rand_core = { version = "0.5" }
rand_chacha = { version = "0.2.1", default-features = false }
rayon = { version = "1", optional = true }
digest = { version = "0.8" }
derivative = { version = "2", features = ["use_core"] }


[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false, features = ["bls12_381"] }


[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[features]
default = [ "std", "parallel" ]
std = [ "algebra-core/std", "ff-fft/std", "r1cs-core/std", "poly-commit/std" ]
print-trace = [ "bench-utils/print-trace" ]
parallel = [ "std", "algebra-core/parallel", "ff-fft/parallel", "poly-commit/parallel", "rayon" ]
