[package]
name = "ark-marlin"
version = "0.1.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "arkworks contributors"
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/arkworks-rs/marlin"
documentation = "https://docs.rs/ark-marlin/"
keywords = ["cryptography", "polynomial commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
bench-utils = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "fix-snark-constraints", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false }
ark-nonnative-field = { git = "https://github.com/arkworks-rs/nonnative", default-features = false }
ark-poly-commit = { git = "https://github.com/scipr-lab/poly-commit", branch = "constraints", default-features = false }
ark-snark = { git = "https://github.com/arkworks-rs/snark", default-features = false }

rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5" }
rand_chacha = { version = "0.2.1", default-features = false }
rayon = { version = "1", optional = true }
digest = { version = "0.8" }
derivative = { version = "2", features = ["use_core"] }
hashbrown = "0.9"

[dev-dependencies]
blake2 = { version = "0.8", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve", "r1cs" ] }
ark-mnt6-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[features]
default = ["std", "parallel"]
std = [ "ark-ff/std", "ark-nonnative-field/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-serialize/std", "ark-poly-commit/std" ]
print-trace = [ "bench-utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-poly-commit/parallel", "rayon" ]
density-optimized = [ "ark-nonnative-field/density-optimized" ]
